# liballegrex

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  Makefile  README.md  config.hpp  mipsdisasm.c  new
.github/workflows/: ci.yml
instructions/: instructions
instructions_test/: Makefile  README.md  instructions  instructions.txt  main.s  test.py
libkirk/: CMakeLists.txt
psp-elfdump/: CMakeLists.txt  README.md  asm_formatter.cpp  asm_formatter.hpp  config.hpp  disasm.css  dump_format.cpp  dump_format.hpp  html_formatter.cpp  html_formatter.hpp  main.cpp
psp-module-format/: .cpp_formatter.cpp.swo  CMakeLists.txt  README.md  config.hpp  cpp_formatter.cpp  cpp_formatter.hpp  default_formatter.cpp  default_formatter.hpp  main.cpp
src/: allegrex_mnemonics.cpp  allegrex_mnemonics.hpp  allegrex_registers.cpp  allegrex_registers.hpp  allegrex_vfpu.cpp  allegrex_vfpu.hpp  config.hpp  enum.hpp  file.cpp  file.hpp  file_buffer.cpp  file_buffer.hpp  file_stream.cpp  file_stream.hpp  format_instructions.cpp  format_instructions.hpp  instruction.hpp  main.cpp  memory_stream.cpp  memory_stream.hpp  mips_registers.cpp  mips_registers.hpp  number_swap.hpp  number_types.hpp  parse_allegrex.cpp  parse_allegrex.hpp  parse_instruction_arguments.cpp  parse_instruction_arguments.hpp  parse_instructions.cpp  parse_instructions.hpp  prx_decrypt.cpp  prx_decrypt.hpp  psp_elf.cpp  psp_elf.hpp  psp_modules.cpp  psp_modules.hpp  psp_prx.hpp  psp_syscalls.cpp  psp_syscalls.hpp  string.hpp
src-old/: elfdump.c
src/allegrex/: allegrex_mnemonics.cpp  allegrex_mnemonics.hpp  allegrex_vfpu.cpp  allegrex_vfpu.hpp  asm_formatter.hpp  disassemble.cpp  disassemble.hpp  elf.hpp  instruction.hpp  liballegrex.hpp  liballegrex_info.hpp  mips_registers.cpp  mips_registers.hpp  number_swap.hpp  parse_instruction_arguments.cpp  parse_instruction_arguments.hpp  parse_instructions.cpp  parse_instructions.hpp  prx_decrypt.cpp  prx_decrypt.hpp  psp_elf.cpp  psp_elf.hpp  psp_modules.cpp  psp_modules.hpp  psp_prx.hpp
src/allegrex/internal/: psp_module_function_argument_defs.cpp  psp_module_function_argument_defs.hpp  psp_module_function_pspdev_headers.hpp  psp_modules.inl
src/internal/: map_macro.hpp  psp_module_function_argument_defs.cpp  psp_module_function_argument_defs.hpp  psp_module_function_pspdev_headers.hpp  psp_modules.inl
tests/: CMakeLists.txt  test_allegrex0.cpp  test_common.hpp  test_cop0.cpp  test_cop0co.cpp  test_cop1.cpp  test_cop1bc.cpp  test_cop1s.cpp  test_cop1w.cpp  test_cop2.cpp  test_cop2bc2.cpp  test_crossquat.cpp  test_fixed.cpp  test_immediate.cpp  test_lvsvrl.cpp  test_psp_modules.cpp  test_register_immediate.cpp  test_special.cpp  test_special2.cpp  test_special3.cpp  test_srlrotr.cpp  test_srlvrotrv.cpp  test_vcmov.cpp  test_vfpu0.cpp  test_vfpu1.cpp  test_vfpu3.cpp  test_vfpu4.cpp  test_vfpu4jump.cpp  test_vfpu5.cpp  test_vfpu6.cpp  test_vfpu7.cpp  test_vfpu9.cpp  test_vfpumatrix.cpp  test_vfpuspecial.cpp  test_vhtfm.cpp  test_vwbn.cpp
